# dark_os_sdk

./: .gitignore  .gitmodules  README.md  build.sh  components.yml  install.sh
app/P001_D21x_basic_demo/: CMakeLists.txt
app/P002_serial_hello_world/: CMakeLists.txt  main.c
devices/aix_d21x/: README.md
devices/aix_rk356x/: README.md
scripts/: component_manager.py  env_setup.sh  run_component_manager.sh
tools/: env_setup.sh
